--- a/package.json
+++ b/package.json
@@ -1,28 +1,43 @@
 {
-  "name": "node-template",
+  "name": "typescript-template",
   "version": "1.0.0",
-  "description": "Template repo for generic Node.js library with tests & lint",
-  "main": "index.js",
-  "repository": "https://github.com/stscoundrel/node-template.git",
+  "description": "Template repo for generic TypeScript /  Node.js library with tests & lint",
+  "repository": "https://github.com/stscoundrel/typescript-template.git",
   "author": "stscoundrel <silvennoinen.sampo@gmail.com>",
   "license": "MIT",
   "private": false,
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=12.0.0"
   },
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   },
   "scripts": {
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "jest": "jest --verbose --runInBand --passWithNoTests",
     "test": "yarn lint && yarn jest",
-    "prepublishOnly": "yarn test"
+    "build": "tsc",
+    "prepublishOnly": "yarn build && yarn test"
   }
 }
