--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: TypeScript - Test
+name: TypeScript - Lint
 
 on: [push, pull_request]
 
@@ -13,11 +13,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Test with Node.js ${{ matrix.node-version }}
+    - name: Lint with Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
     - run: yarn install --production=false
-    - run: yarn jest
+    - run: yarn lint
       env:
         CI: true
