--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "jest": "jest --verbose --runInBand --passWithNoTests",
-    "test": "yarn lint && yarn jest",
+    "test" : "yarn jest",
     "test:mutation": "stryker run",
     "test:coverage": "jest --coverage --coverageThreshold='{\"global\":{\"statements\":\"90\", \"functions\":\"90\", \"branches\":\"90\", \"lines\":\"90\"}}'",
     "build": "tsc",
