--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-typescript": "^7.13.0",
-    "@stryker-mutator/core": "^4.4.1",
+    "@stryker-mutator/core": "^4.6.0",
     "@stryker-mutator/jest-runner": "^4.5.0",
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.23.0",
@@ -38,10 +38,10 @@
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "jest": "jest --verbose --runInBand --passWithNoTests",
-    "test" : "yarn jest",
+    "test:unit": "yarn jest",
     "test:mutation": "stryker run",
     "test:coverage": "jest --coverage --coverageThreshold='{\"global\":{\"statements\":\"90\", \"functions\":\"90\", \"branches\":\"90\", \"lines\":\"90\"}}'",
     "build": "tsc",
-    "prepublishOnly": "yarn build && yarn test"
+    "prepublishOnly": "yarn build && yarn test:unit"
   }
 }
