--- a/.github/workflows/alliser.yml
+++ b/.github/workflows/alliser.yml
@@ -11,5 +11,5 @@ jobs:
     - uses: stscoundrel/alliser-action@v0.5.2
       name: Alliser action step
       with:
-        extensions: ".ts"
-        folders: "src,tests"
+        extensions: .js
+        folders: src,tests
