Run with Bun instead of Node
- Replaces Yarn with Bun
- Replaces Node CI/CD actions with Bun
- Replaces Eslint with Biome & Prettier. Eslint 9 migration still seems far away.
- Removes Striker, as I seem to use it so rarely nowadays.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,17 +7,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x, 20.x]
-
     steps:
     - uses: actions/checkout@v4
-    - name: Build with Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install --production=false
-    - run: yarn build
+    - name: Build with Bun
+      uses: oven-sh/setup-bun@v2
+    - run: bun install
+    - run: bun run build
       env:
         CI: true
