--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,17 +7,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [16.x, 18.x, 20.x]
-
     steps:
     - uses: actions/checkout@v4
-    - name: Test with Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install --production=false
-    - run: yarn test:unit
+    - name: Test with Bun
+      uses: oven-sh/setup-bun@v2
+    - run: bun install
+    - run: bun test
       env:
         CI: true
