--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-template",
   "version": "1.0.0",
-  "description": "Template repo for generic TypeScript /  Node.js library with tests & lint",
+  "description": "Template repo for generic TypeScript /  Node.js library with tests, lint and CI",
   "repository": "https://github.com/stscoundrel/typescript-template.git",
   "author": "stscoundrel <silvennoinen.sampo@gmail.com>",
   "license": "MIT",
@@ -15,34 +15,21 @@
     "node": ">=12.0.0"
   },
   "dependencies": {},
-  "devDependencies": {
-    "@babel/core": "^7.23.0",
-    "@babel/preset-env": "^7.22.20",
-    "@babel/preset-typescript": "^7.23.0",
-    "@stryker-mutator/core": "^7.1.1",
-    "@stryker-mutator/jest-runner": "^7.1.1",
-    "@types/jest": "^29.5.5",
+  "devDependencies": {    
+    "@biomejs/biome": "1.9.2",
+    "@types/bun": "latest",
     "@types/node": "^20.8.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "babel-jest": "^29.7.0",
-    "eslint": "^8.50.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jest": "^27.4.2",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.1",
+    "prettier": "^3.3.3",
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "lint": "eslint .",
-    "fix": "eslint . --fix",
-    "jest": "jest --verbose --runInBand --passWithNoTests",
-    "test:unit": "yarn jest",
-    "test:mutation": "stryker run",
-    "test:coverage": "jest --coverage --coverageThreshold='{\"global\":{\"statements\":\"90\", \"functions\":\"90\", \"branches\":\"90\", \"lines\":\"90\"}}'",
-    "build": "tsc",
-    "prepublishOnly": "yarn build && yarn test:unit"
+    "prettier:fix": "prettier src tests --write",
+    "prettier:check": "prettier src tests --check",
+    "biome:check": "bunx biome lint src tests",
+    "biome:fix": "bunx biome lint --write src tests",
+    "lint": "bun run prettier:check && bun run biome:check",
+    "build": "bun tsc",
+    "prepublishOnly": "npm run build",
+    "test:coverage": "bun run test --coverage"
   }
 }
