--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,29 @@
 version: 2
 updates:
+  - package-ecosystem: "bun"
+    directory: "/"
+    schedule:
+      interval: "monthly"
+    open-pull-requests-limit: 25
+    groups:
+      npm-minor-and-patch:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
+      npm-major:
+        patterns:
+          - "*"
+        update-types:
+          - "major"
+  
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: monthly
     open-pull-requests-limit: 25
     groups:
-       ci-dependencies:
+       dependencies:
           patterns:
             - "*" # Match all dependencies to one PR.
